# massgridpool

./: .gitignore  ckpool.conf
src/: Makefile.am  bitcoin.c  libckpool.c  stratifier.c  stratifier.h
src/crypto/: w_blake.c  w_blake256.c  w_bmw.c  w_cubehash.c  w_echo.c  w_fugue.c  w_groestl.c  w_hamsi.c  w_haval.c  w_jh.c  w_keccak.c  w_luffa.c  w_sha2big.c  w_shabal.c  w_shavite.c  w_simd.c  w_skein.c  w_skein256.c
